# ammonite

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
ammonite/: Object2D.py  Object3D.py  __init__.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/autosummary/: class.rst
docs/source/: conf.py
docs/source/_templates/autosummary/: class.rst
tests/: test_Object2D.py  test_Object3D.py
