[tool.poetry]
name = "ammonite"
version = "0.1.0"
description = "Unit aware calculation of geometrical primitives' area, volumes, etc."
authors = ["Lynda Metref <lynda.metref@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Pint = "^0.18"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest-cov = "*"
pytest = "*"
flake8 = "^4.0.1"
twine = "^3.8.0"
sphinx = "^4.4.0"
sphinx-rtd-theme = "*"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-autodoc-typehints = "*"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-autodoc-annotation", "sphinx-autodoc-typehints"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
